<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="settings">Settings</string>
    <string name="add_record">Add Record</string>
    <string name="analyze_record">Analyze Records</string>
    <string name="clear_all">Clear All</string>
    <string name="help">Help</string>
    <string name="most_recent_record">Most Recent Record</string>
    <string name="weight">Weight:</string>
    <string name="bmi_category">BMI Category: </string>
    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal weight</string>
    <string name="overweight">Overweight</string>
    <string name="obesity">Obesity</string>
    <string name="height">Height:</string>
    <string name="record_time">Record Time:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="goal_weight">Goal Weight:</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="record_date">Record Date:</string>
    <string name="comment">Comment:</string>
    <string name="record_description1">The normal range of BMI is 18.5—24.9</string>
    <string name="record_description2">Your record BMI is </string>
    <string name="record_description3">Your record weight category is </string>
    <string name="delete_all_title">Delete All Weight Records?</string>
    <string name="delete_all_message">Are you sure you want to delete all weight records?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_underweight">You are underweight. Try to eat more and exercise to live a healthy lifestyle!</string>
    <string name="message_normal">Your weight is within the normal range. Keep it up with healthy lifestyle!</string>
    <string name="message_overweight">You are overweight. Try to exercise more to live a healthy lifestyle!</string>
    <string name="message_obesity">You are obesity. Try to exercise more to live a healthy lifestyle!</string>
    <string name="settings_input_error_message">Please enter valid settings values!</string>
    <string name="general_settings">General Settings</string>
    <string name="analysis_settings">Analysis Settings</string>
    <string name="best_fit_type">Best Fit Type:</string>
    <string name="best_fit_order">Best Fit Order:</string>
    <string-array name="best_fit_type_array">
        <item>Linear</item>
        <item>Logarithmic</item>
        <item>Polynomial</item>
        <item>Power</item>
        <item>Exponential</item>
    </string-array>
    <string-array name="best_fit_order_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="success_saved_settings">Saved settings successfully!</string>
    <string name="failed_saved_settings">Failed to save settings!</string>
    <string name="delete_record">Delete Record</string>
    <string name="please_set_settings">Please setup the settings first!</string>
    <string name="record_input_error_message">Please enter valid input values!</string>
    <string name="record_added_success">New weight record added successfully!</string>
    <string name="record_added_failed">Failed to add new weight record!</string>
    <string name="record_updated_success">Updated weight record successfully!</string>
    <string name="record_updated_failed">Failed to update weight record!</string>
    <string name="delete_record_question">Are you sure you want to delete record</string>
    <string name="record_deleted_success">Weight record deleted!</string>
    <string name="record_deleted_failed">Failed to delete the weight record!</string>
    <string name="no_weight_record">No weight record found.</string>
    <string name="setup_settings_first">Remember to setup the settings first:)</string>
</resources>